[add] domande e programma per la lezione "Le funzioni"

--- a/5GES_il_team.html
+++ b/5GES_il_team.html
@@ -91,9 +91,10 @@
         <div class="col-md-12">
           <div class="h-100 p-5 text-white bg-dark rounded-3">
             <h2>Risorse</h2>
-            <p>Gestione progetto e organizzazione di impresa</p>
-            <a href="https://www.matematicamente.it/manuali-scolastici/gestione-di-progetto-e-organizzazione-di-impresa/"
-              class="btn btn-outline-light" type="button">VAI</a>
+            <p>Gestione progetto e organizzazione di impresa
+              <a href="https://www.matematicamente.it/manuali-scolastici/gestione-di-progetto-e-organizzazione-di-impresa/"
+                class="btn btn-outline-light" type="button">VAI</a>
+            </p>
           </div>
         </div>
       </div>
