[minor] 2 questions in the empty page

--- a/empty.html
+++ b/empty.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/jumbotron/">
 
     <!-- Bootstrap core CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
     <!-- Favicons -->
@@ -79,10 +79,19 @@
       </div>
       </div>
 	
-	<div class="row align-items-md-stretch mt-5">
+	 <div class="row align-items-md-stretch mt-5">
       <div class="col-md-6">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Domanda 1</h2>
+          <p>Risposta.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row align-items-md-stretch mt-5">
+      <div class="col-md-6">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>Domanda 2</h2>
           <p>Risposta.</p>
         </div>
       </div>
