[add] domande più precise "GES"

--- a/5GES_il_team.html
+++ b/5GES_il_team.html
@@ -72,13 +72,13 @@
           <p class="col-md-8 fs-4">
 
           <ul>
-            <li>1) Descivi chi è quali sono i compiti dello "sponsor". (Tipo di ruolo)</li>
-            <li>2) Chi fa parte del "programme board"? Che compito ha?</li>
-            <li>3) Cosa fa il Project manager?</li>
-            <li>4) Cosa è il "Project Initial Document"?</li>
-            <li>5) Di cosa si occupa il "Project Management Office"?
-            <li>6) Cosa fa il "Il responsabile della qualità"?</li>
-            <li>7) Descrici i compiti del "responsabile dell’amministrazione"</li>
+            <li>Descivi chi è quali sono i compiti dello "sponsor"</li>
+            <li>Chi fa parte del "programme board"? Che compito ha?</li>
+            <li>Cosa fa il Project manager?</li>
+            <li>Cosa è il "Project Initial Document"?</li>
+            <li>Di cosa si occupa il "Project Management Office"?
+            <li>Cosa fa il "Il responsabile della qualità"?</li>
+            <li>Descrici i compiti del "responsabile dell’amministrazione"</li>
             </li>
           </ul>
 
@@ -100,10 +100,53 @@
       </div>
 
       <div class="row align-items-md-stretch mt-5">
-        <div class="col-md-6">
+        <div class="col-md-12">
           <div class="h-100 p-5 bg-light border rounded-3">
-            <h2>Domanda 1</h2>
-            <p>Risposta.</p>
+            <h2>LO SPONSOR</h2>
+            <p><strong>Chi è?<strong> è un ...</p>
+            <p><strong>Il suo compito principale?<strong> ...</p>
+            <p><strong>Responsabilità?<strong>...</p>
+            <p><strong>Compiti principali:<strong>...</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row align-items-md-stretch mt-5">
+        <div class="col-md-12">
+          <div class="h-100 p-5 bg-light border rounded-3">
+            <h2>IL COMITATO DI PROGRAMMA</h2>
+            <p><strong>Chi sono?<strong> sono ...</p>
+            <p><strong>Il suo compito principale?<strong> ...</p>
+            <p><strong>Responsabilità?<strong>...</p>
+            <p><strong>Compiti principali:<strong>...</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row align-items-md-stretch mt-5">
+        <div class="col-md-12">
+          <div class="h-100 p-5 bg-light border rounded-3">
+            <h2>IL RESPONSABILE DI PROGETTO (PROJECT MANAGER)</h2>
+            <p><strong>Il suo compito principale?<strong> ...</p>
+            <p><strong>Da chi dipende?<strong>...</p>
+            <p><strong>Responsabilità?<strong>...</p>
+            <p><strong>Si occupa di attività tecniche?<strong>...</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row align-items-md-stretch mt-5">
+        <div class="col-md-12">
+          <div class="h-100 p-5 bg-light border rounded-3">
+            <h2>L’UFFICIO DI SUPPORTO AI PROGETTI</h2>
+            <p><strong>Il suo compito principale?<strong> ...</p>
+            <p><strong>Da chi dipende?<strong>...</p>
+            <p><strong>Attività svolte dal PMO direttamente per il project manager?<strong>...</p>
+            <p><strong>Attività svolte dal PMO direttamente per glu utenti?<strong>...</p>
+            <p><strong>Attività svolte dal PMO direttamente per altre risorse coinvolte nel progetti?<strong>...</p>
           </div>
         </div>
       </div>
@@ -111,6 +154,7 @@
       <footer class="pt-3 mt-4 text-muted border-top">
         © Domande&Risposte
       </footer>
+
     </div>
   </main>
 
