--- a/empty.html
+++ b/empty.html
@@ -18,18 +18,13 @@
 
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/apple-touch-icon.png"
-    sizes="180x180">
-  <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32"
-    type="image/png">
-  <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16"
-    type="image/png">
+  <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="manifest" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/manifest.json">
-  <link rel="mask-icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/safari-pinned-tab.svg"
-    color="#7952b3">
+  <link rel="mask-icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
   <link rel="icon" href="https://getbootstrap.com/docs/5.1/assets/img/favicons/favicon.ico">
   <meta name="theme-color" content="#7952b3">
-
 
   <style>
     .bd-placeholder-img {
@@ -46,7 +41,6 @@
       }
     }
   </style>
-
 
 </head>
 
@@ -70,35 +64,12 @@
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">{Argomento} Domande</h1>
           <p class="col-md-8 fs-4">
-
           <ul>
             <li>1 ...</li>
             <li>2 ...</li>
             <li>3 ...</li>
           </ul>
-
           </p>
-
-        </div>
-      </div>
-<<<<<<< HEAD
-      </div>
-	
-	<div class="row align-items-md-stretch mt-5">
-      <div class="col-md-12">
-        <div class="h-100 p-5 bg-light border rounded-3">
-          <h2>Domanda 1</h2>
-          <p>Risposta.</p>
-=======
-
-      <div class="row align-items-md-stretch">
-        <div class="col-md-12">
-          <div class="h-100 p-5 text-white bg-dark rounded-3">
-            <h2>Risorse</h2>
-            <p></p>
-            <a href="#" class="btn btn-outline-light" type="button">Example button</a>
-          </div>
->>>>>>> d4aa3e8cbe1e70d5f09383326f46c6095a647199
         </div>
       </div>
 
