[add] la memoria  con le funzioni

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
               </div>
             </a>
           </div>
+          <div class="list-group mt-3">
+            <a href="3I_FunzioniELaMemoria.html" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">              
+              <div class="d-flex gap-2 w-100 justify-content-between">
+                <div>
+                  <h6 class="mb-0">Funzioni & Memoria</h6>
+                </div>
+              </div>
+            </a>
+          </div>
       </div>
     </div>
 
