[add] Tris - refactory con funzioni

--- a/index.html
+++ b/index.html
@@ -73,27 +73,36 @@
       </div>
 
 	<div class="row mt-5">
-      <div class="col-md-8">
-          <h2>3I -Informatica classi 3</h2>          
-          <div class="list-group mt-3">
-            <a href="3I_Funzioni.html" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">              
-              <div class="d-flex gap-2 w-100 justify-content-between">
-                <div>
-                  <h6 class="mb-0">Introduzione alle funzioni</h6>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="list-group mt-3">
-            <a href="3I_FunzioniELaMemoria.html" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">              
-              <div class="d-flex gap-2 w-100 justify-content-between">
-                <div>
-                  <h6 class="mb-0">Funzioni & Memoria</h6>
-                </div>
-              </div>
-            </a>
-          </div>
-      </div>
+        <div class="col-md-8">
+            <h2>3I -Informatica classi 3</h2>
+            <div class="list-group mt-3">
+                <a href="3I_Funzioni.html" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Introduzione alle funzioni</h6>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="list-group mt-3">
+                <a href="3I_FunzioniELaMemoria.html" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Funzioni & Memoria</h6>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="list-group mt-3">
+                <a href="tris.c" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Tris - refactory con funzioni</h6>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
 
     <div class="row mt-5">
