--- a/index.html
+++ b/index.html
@@ -97,11 +97,20 @@
                 <a href="tris.c" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                         <div>
-                            <h6 class="mb-0">Tris - refactory con funzioni</h6>
+                            <h6 class="mb-0">Tris - refactory con funzioni (programma originale)</h6>
                         </div>
                     </div>
                 </a>
             </div>
+            <div class="list-group mt-3">
+              <a href="tris_v1.c" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                      <div>
+                          <h6 class="mb-0">Tris - refactory con funzioni (versione 1)</h6>
+                      </div>
+                  </div>
+              </a>
+          </div>
         </div>
     </div>
 
@@ -132,6 +141,17 @@
               </div>
             </a>
           </div>
+
+          <div class="list-group mt-3">
+            <a href="5GES_il_team_2.html" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">              
+              <div class="d-flex gap-2 w-100 justify-content-between">
+                <div>
+                  <h6 class="mb-0">Il ruolo del team (lez 2)</h6>
+                </div>
+              </div>
+            </a>
+          </div>
+
       </div>
     </div>
 
