--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
               </div>
             </a>
           </div>
+		  <div class="list-group mt-3">
+            <a href="giocoDelLotto_v2.c" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+              <div class="d-flex gap-2 w-100 justify-content-between">
+                <div>
+                  <h6 class="mb-0">Gioco del lotto - random (consegna + programma v0.4)</h6>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
 
